[gd_scene load_steps=5 format=3 uid="uid://bg8u8d77tt55b"]

[ext_resource type="Texture2D" uid="uid://dtnjyweiho7ks" path="res://Sprites/ghostLightPO.png" id="1_uww3y"]
[ext_resource type="Script" path="res://Scripts/GhostLight.gd" id="1_wbq28"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8hh31"]
radius = 13.0

[sub_resource type="CircleShape2D" id="CircleShape2D_317mt"]
radius = 283.0

[node name="GhostLight" type="Area2D" groups=["GhostLight"]]
script = ExtResource("1_wbq28")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_8hh31")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_uww3y")

[node name="VisionField" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="VisionField"]
shape = SubResource("CircleShape2D_317mt")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="VisionField" to="." method="_on_vision_field_body_entered"]
[connection signal="body_exited" from="VisionField" to="." method="_on_vision_field_body_exited"]
